Day7 Building the cta section pt2

--- a/index.html
+++ b/index.html
@@ -504,8 +504,47 @@
       </section>
       <section class="Section-cta container">
         <div class="cta">
-          <div class="cta-form">form here</div>
-          <div class="cta-img">imge</div>
+          <div class="cta-form">
+            <h2>Get your first meal for free!</h2>
+            <p class="cta-text">
+              Healthy, tasty and hassle-free meals are waiting for you. Start
+              eating well today. You can cancel or pause anytime. And the first
+              meal is on us!
+            </p>
+            <form action="#" class="form-cta">
+              <div>
+                <label for="first-name">First Name</label>
+                <input
+                  type="text"
+                  id="first-name"
+                  placeholder="your name here.."
+                  required
+                />
+              </div>
+              <div>
+                <label for="email">E-mail</label>
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="me@example.com"
+                  required
+                />
+              </div>
+              <div>
+                <label for="hear-from">Where did you hear about us?</label>
+                <select id="hear-from">
+                  <option value="">--Please tell us--</option>
+                  <option value="friends">Friend and Family</option>
+                  <option value="ad">Facebook-ad</option>
+                  <option value="youtube">YouTube</option>
+                  <option value="podcast">Podcast</option>
+                  <option value="others">Other</option>
+                </select>
+              </div>
+              <button class="cta-button">Submit</button>
+            </form>
+          </div>
+          <div class="cta-img"></div>
         </div>
       </section>
     </main>
