--- a/index.html
+++ b/index.html
@@ -513,16 +513,16 @@
             </p>
             <form action="#" class="form-cta">
               <div>
-                <label for="first-name">First Name</label>
+                <label for="first-name">First Name:</label>
                 <input
                   type="text"
                   id="first-name"
-                  placeholder="your name here.."
+                  placeholder="Shiv Pratap"
                   required
                 />
               </div>
               <div>
-                <label for="email">E-mail</label>
+                <label for="email">E-mail:</label>
                 <input
                   type="email"
                   id="email"
@@ -531,7 +531,7 @@
                 />
               </div>
               <div>
-                <label for="hear-from">Where did you hear about us?</label>
+                <label for="hear-from">Where did you hear about us:</label>
                 <select id="hear-from">
                   <option value="">--Please tell us--</option>
                   <option value="friends">Friend and Family</option>
@@ -541,7 +541,7 @@
                   <option value="others">Other</option>
                 </select>
               </div>
-              <button class="cta-button">Submit</button>
+              <button class="cta-btn">Sign up now</button>
             </form>
           </div>
           <div class="cta-img"></div>
