did some minor changes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         <nav class="navigations">
           <ul class="main-nav-bar">
-            <li><a href="#" class="nav-blocks">Section1</a></li>
-            <li><a href="#" class="nav-blocks">Section2</a></li>
-            <li><a href="#" class="nav-blocks">Section3</a></li>
-            <li><a href="#" class="nav-blocks">Section4</a></li>
-            <li><a href="#" class="nav-blocks nav-cta">Section5</a></li>
+            <li><a href="#" class="nav-blocks">How it works</a></li>
+            <li><a href="#" class="nav-blocks">Meals</a></li>
+            <li><a href="#" class="nav-blocks">Testimonials</a></li>
+            <li><a href="#" class="nav-blocks">Price</a></li>
+            <li><a href="#" class="nav-blocks nav-cta">Try For Free</a></li>
           </ul>
         </nav>
       </header>
@@ -145,7 +145,7 @@
       <section class="meals-section container">
         <p class="center-content sub-heading">Meals</p>
         <h2 class="center-content">Omnifood AI chooses from 5,000+ recipes</h2>
-        <div class="grid grid--3-col">
+        <div class="grid grid--3-col meal-cards">
           <div class="meals">
             <div class="meal-img">
               <img src="/img/meals/meal-1.jpg" alt="Japanese Gyozas" />
