made responsive for tablets

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     name="close-circle-outline"
                     class="meal-list-icon"
                   ></ion-icon
-                  ><span>Delivery charges may apply</span>
+                  ><span>Not access to latest recipes</span>
                 </li>
               </ul>
             </div>
