adding mobile nav-bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main>
-      <header class="header">
+      <header class="header nav-open">
         <a href="#">
           <img src="/img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
         </a>
@@ -29,6 +29,10 @@
             <li><a href="#" class="nav-blocks nav-cta">Try For Free</a></li>
           </ul>
         </nav>
+        <button class="main-nav-btn">
+          <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+          <ion-icon name="close-outline" class="icon-mobile-nav"></ion-icon>
+        </button>
       </header>
       <section class="Section-Hero">
         <div class="hero-grid">
