--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     name="checkmark-circle-outline"
                     class="meal-list-icon"
                   ></ion-icon
-                  ><span>Order from 11am to 9pm</span>
+                  ><span>Order: 11am to 9pm</span>
                 </li>
                 <li>
                   <ion-icon
