--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main>
-      <header class="header nav-open">
+      <header class="header">
         <a href="#">
           <img src="/img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
         </a>
