added currentYear event for the copyright section

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
               <li><a href="#" class="logo-link"><ion-icon name="logo-linkedIn"></ion-icon></a></li>
             </ul>
           </p>
-          <p class="copyright">Copyright &copy; 2023 all rights reserved.</p>
+          <p class="copyright">Copyright &copy; <span class="year">2027</span> all rights reserved.</p>
         </div>
         <div class="footer-address">
           <p class="footer-heading">Contact us</p>
@@ -617,5 +617,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="script.js"></script>
   </body>
 </html>
