feat- maiking menu-bar work in mobile

--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@
               >Start Eating Well</a
             >
             <a href="#" class="learn-more btn"
-              >learn more
-              <ion-icon
-                name="caret-down-outline"
-                class="learn-more-icon"
-              ></ion-icon
-            ></a>
+              >learn more &downarrow;</a>
             <div class="customer-images">
               <div class="customer-img">
                 <img src="img/customers/customer-1.jpg" alt="Customer Photos" />
@@ -569,7 +564,7 @@
               <li><a href="#" class="logo-link"><ion-icon name="logo-linkedIn"></ion-icon></a></li>
             </ul>
           </p>
-          <p class="copyright">Copyright &copy; 2023 all rights reserved.</p>
+          <p class="copyright">Copyright &copy;<span class="year"> 2023</span> all rights reserved.</p>
         </div>
         <div class="footer-address">
           <p class="footer-heading">Contact us</p>
@@ -617,5 +612,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="script.js"></script>
   </body>
 </html>
