feat- added link to different parts of the page, smooth scrolling and some minor changes

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
         <nav class="navigations">
           <ul class="main-nav-bar">
-            <li><a href="#" class="nav-blocks">How it works</a></li>
-            <li><a href="#" class="nav-blocks">Meals</a></li>
-            <li><a href="#" class="nav-blocks">Testimonials</a></li>
-            <li><a href="#" class="nav-blocks">Price</a></li>
-            <li><a href="#" class="nav-blocks nav-cta">Try For Free</a></li>
+            <li><a href="#how" class="nav-blocks">How it works</a></li>
+            <li><a href="#meals" class="nav-blocks">Meals</a></li>
+            <li><a href="#testimonials" class="nav-blocks">Testimonials</a></li>
+            <li><a href="#price" class="nav-blocks">Price</a></li>
+            <li><a href="#cta" class="nav-blocks nav-cta">Try For Free</a></li>
           </ul>
         </nav>
         <button class="main-nav-btn">
@@ -43,10 +43,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="subscription btn margin-right-sm"
+            <a href="#price" class="subscription btn margin-right-sm"
               >Start Eating Well</a
             >
-            <a href="#" class="learn-more btn"
+            <a href="#how" class="learn-more btn"
               >learn more &downarrow;</a>
             <div class="customer-images">
               <div class="customer-img">
@@ -87,7 +87,7 @@
           <img src="/img/logos/usa-today.png" alt="USA-Today logo" />
         </div>
       </section>
-      <section class="Section-how-to container">
+      <section class="Section-how-to container" id="how">
         <p class="sub-heading">how it works</p>
         <h2>Your daily dose of health in 3 simple steps</h2>
         <div class="grid grid--2-col grid--center-v">
@@ -142,9 +142,9 @@
           </div>
         </div>
       </section>
-      <section class="meals-section container">
+      <section class="meals-section container" >
         <p class="center-content sub-heading">Meals</p>
-        <h2 class="center-content">Omnifood AI chooses from 5,000+ recipes</h2>
+        <h2 class="center-content" id="meals">Omnifood AI chooses from 5,000+ recipes</h2>
         <div class="grid grid--3-col meal-cards">
           <div class="meals">
             <div class="meal-img">
@@ -274,7 +274,7 @@
           >
         </div>
       </section>
-      <section class="Section-testimonial grid grid--2-col">
+      <section class="Section-testimonial grid grid--2-col" id="testimonials">
         <div class="testimonial-container">
           <p class="sub-heading">Testimonials</p>
           <h2>Once you try it you can't go back</h2>
@@ -370,8 +370,8 @@
       </section>
       <section class="Section-price container">
         <p class="sub-heading">Pricing</p>
-        <h2>Eating well without breaking the bank</h2>
-        <div class="grid grid--2-col">
+        <h2 id="price">Eating well without breaking the bank</h2>
+        <div class="grid grid--2-col" >
           <div class="price-panel price-panel-starter">
             <div class="price-panel-intro">
               <p class="price-name">starter</p>
@@ -504,7 +504,7 @@
           </div>
         </div>
       </section>
-      <section class="Section-cta container">
+      <section class="Section-cta container" id="cta">
         <div class="cta">
           <div class="cta-form">
             <h2>Get your first meal for free!</h2>
