feat- added sticky navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Omnifood</title>
+    <meta name="description" content="Omnidood is an AI pwered food subscription that will make you eat healthy again, 365 days per year. It's tailoredt to your personal taste and nutritional needs.">
+    <title>Omnifood &mdash; Never Cook Again</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
