adding meta-data and favicon and manifest

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Omnidood is an AI pwered food subscription that will make you eat healthy again, 365 days per year. It's tailoredt to your personal taste and nutritional needs.">
+    <meta name="description" content="Omnidood is an AI pwered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal taste and nutritional needs." />
     <title>Omnifood &mdash; Never Cook Again</title>
+  <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+  <link rel="manifest" href="manifest.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
