--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/queries.css">
+
   </head>
   <body>
     <main>
       <header class="header">
         <a href="#">
+          
           <img src="/img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
         </a>
 
@@ -67,11 +69,17 @@
             </div>
           </div>
           <div class="hero-image">
-            <img
-              src="/img/hero.png"
+            <picture>
+              <source  srcset="img/hero.webp"
+              type="image/webp">
+              <source  srcset="img/hero-min.png"
+              type="image/png">
+              <img
+              src="/img/hero-min.png"
               class="hero-img"
               alt="a woman eating food, food on table, food in container"
             />
+            </picture>
           </div>
         </div>
       </section>
