trying to resolve netlify form issue

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
               eating well today. You can cancel or pause anytime. And the first
               meal is on us!
             </p>
-            <form action="#" class="form-cta" name="form-cta" netlify >
+            <form action="/" class="form-cta" name="form-cta" netlify >
               <div>
                 <label for="first-name">Full Name:</label>
                 <input
@@ -557,7 +557,7 @@
                   <option value="others">Other</option>
                 </select>
               </div>
-              <button class="cta-btn">Sign up now</button>
+              <button class="cta-btn" name="submit-button">Sign up now</button>
             </form>
           </div>
           <div class="cta-img"></div>
