--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
               eating well today. You can cancel or pause anytime. And the first
               meal is on us!
             </p>
-            <form action="/" class="form-cta" name="form-cta" netlify >
+            <form class="form-cta" name="form-cta" netlify >
               <div>
                 <label for="first-name">Full Name:</label>
                 <input
